add direct project links

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <body>
         <div class="center">
             <h1 class="main"><a href="https://www.konafarry.com/?utm_source=rtpweb">Learn more and contact me.</a></h1>
+            <h3 class="main"><a href="https://www.ahoyfinance.co/?utm_source=rtpweb">Ahoy Finance</a>  |  <a href="https://www.pantographapp.com/?utm_source=rtpweb">Pantograph</a></h3>
             <p class="link">
                 <small>&copy;<script>document.write(new Date().getFullYear())</script> Round Trip Productions, LLC</small>
             </p>
