updates for TS Lyrics

--- a/tslyrics/index.html
+++ b/tslyrics/index.html
@@ -2,13 +2,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Round Trip Productions, LLC</title>
+        <title>TS Lyrics | Round Trip Productions, LLC</title>
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
         <div class="center">
-            <h1 class="main"><a href="https://www.konafarry.com/?utm_source=rtpweb">Learn more and contact me.</a></h1>
-            <h3 class="main"><a href="https://www.ahoyfinance.co/?utm_source=rtpweb">Ahoy Finance</a>  |  <a href="https://www.pantographapp.com/?utm_source=rtpweb">Pantograph</a></h3>
+            <h1 class="main">TS Lyrics</h1>
+            <p class="main">
+                Song lyrics on your iOS Home Screen and Lock Screen
+                <br/>
+                <a href="https://apps.apple.com/us/app/ts-lyrics/id6444421812">Download on the App Store</a>
+            </p>
             <p class="link">
                 <small>&copy;<script>document.write(new Date().getFullYear())</script> Round Trip Productions, LLC</small>
             </p>
