--- a/tslyrics/help/index.html
+++ b/tslyrics/help/index.html
@@ -2,13 +2,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Round Trip Productions, LLC</title>
+        <title>TS Lyrics | Round Trip Productions, LLC</title>
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
         <div class="center">
-            <h1 class="main"><a href="https://www.konafarry.com/?utm_source=rtpweb">Learn more and contact me.</a></h1>
-            <h3 class="main"><a href="https://www.ahoyfinance.co/?utm_source=rtpweb">Ahoy Finance</a>  |  <a href="https://www.pantographapp.com/?utm_source=rtpweb">Pantograph</a></h3>
+            <h1 class="main">TS Lyrics</h1>
+            <p class="main">
+                For assistance with TS Lyrics, please email <a href="mailto:kona@pantographapp.com">kona@pantographapp.com</a>
+            </p>
             <p class="link">
                 <small>&copy;<script>document.write(new Date().getFullYear())</script> Round Trip Productions, LLC</small>
             </p>
